--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-web-swiper": "^2.2.4",
     "styled-components": "^6.0.7"
   },
