--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-screens": "^3.24.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-web-swiper": "^2.2.4",
+    "react-query": "^3.39.3",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
