--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.1",
